force basic security

--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -95,7 +95,7 @@ cluster.initial_master_nodes:
 #
 # ---------------------------------- Security -----------------------------------
 #
-xpack.security.enabled: {{ es_xpack_enabled }}
+xpack.security.enabled: true
 xpack.security.http.ssl.enabled: {{ es_tls_enabled }}
 xpack.security.transport.ssl.enabled: {{ es_tls_enabled }}
 #
